infrastructure/configs/production/traefik-local-network-only-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-network-only
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      - 10.0.0.0/16
